reveal OR copy mount point depending on chosen mounter